# virtual-dev-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
app/: README.md  jest.config.js  package-lock.json  package.json
app/public/: index.html  manifest.json
app/src/: App.css  App.js  App.test.jsx  index.css  reportWebVitals.js  setupTests.js
compose/: docker-compose.dev.yml  docker-compose.yml
docker/api/: Dockerfile  Dockerfile.dev
docker/worker/: Dockerfile
docs/: ARCHITECTURE.md  FILE_STRUCTURE.md  IMPLEMENTATION_PLAN.md  TESTING_STRATEGY.md  TOOLS_MAPPING.md
gemini-cli/: Dockerfile  GEMINI.md  plan.md  settings.json
mcps/discord/: Dockerfile  README.md  index.js  mcp-server.js  package-lock.json  package.json  toolHandlers.js  tools.js
mcps/github/: Dockerfile  index.js  mcp-server.js  package-lock.json  package.json  toolHandlers.js  tools.js
mcps/jira/: Dockerfile  index.js  jest.config.cjs  jest.config.js  package-lock.json  package.json  toolHandlers.js  tools.js
scripts/: run_task.py
src/: __init__.py  celery_app.py  config.py  logger.py
src/agents/: __init__.py  graph.py  implementer.py  parsers.py  planner.py  reporter.py  state.py  supervisor.py  tester.py
src/api/: __init__.py  app.py
src/clients/: __init__.py  discord_client.py  github_client.py  jira_client.py
src/db/: __init__.py  checkpointer.py
src/tasks/: workflow.py
src/tools/: __init__.py  discord.py  filesystem.py  git.py  github.py  jira.py
tests/: __init__.py  conftest.py
(+48 files in other folders)
